# MEArec

./: .coverage  .coveragerc  .travis.yml  LICENSE  MANIFEST.in  README.md  Singularity.v0.1.0  defaultconfig.py  environment.yml  example_plotting.py  gen_recordings.py  gen_spiketrains.py  gen_templates.py  hbp_cells.py  ml_mearec.py  ml_mearec.py.mp  ml_requirements.txt  pyproject.toml  readthedocs.yml  recording_gen.py  requirements.txt  setup.py  simulate_cells.py  spiketrain_gen.py  template_gen.py  templates_gen.py  tools.py
MEArec/: __init__.py  cli.py  drift_tools.py  generation_tools.py  generators.py  simulate_cells.py  tools.py  version.py
continuous_integration/: install.sh
docs/: api.rst  cli.rst  conf.py  generate_recordings.rst  generate_templates.rst  index.rst  installation.rst  overview.rst  plotting.rst  requirements.txt  setting_config.rst  usage.rst  whatisnew.rst
figures/: figure1.py  figure3.py  figure4.py  figure5.py  figure5_params.yaml  figure6.py  figure6_params.yaml  figure7.py  figure7_params.yaml  figure8.py  figure8_params.yaml  performance.py  plotting_conventions.py
notebooks/: generate_neuropixels_templates_and_recordings.ipynb  generate_recordings_with_allen_models.ipynb  generate_recordings_with_user_defined_spiketrains.ipynb  generate_recordings_with_varying_bursting_modulation.ipynb  generate_template_library_with_allen_models.ipynb  generate_templates_and_recordings.ipynb  generate_templates_and_recordings_drift.ipynb  generate_templates_and_recordings_int16.ipynb  generate_templates_and_recordings_on_multiple_probes.ipynb  generate_varying_noise_drifting.ipynb  generate_varying_noise_levels.ipynb
params/: recording_params.yaml  spiketrain_params.yaml  template_params.yaml
utils/: hdf5_to_recording.py  hdf5_to_spiketrains.py  hdf5_to_templates.py  recording_to_hdf5.py  spiketrains_to_hdf5.py  (+1 more)
(+216 files in other folders)
